<?xml version="1.0"?>
<package format="2">
  <name>bz2pub</name>
  <version>1.0.0</version>
  <description>The bz2pub package</description>


  <maintainer email="tutan19@itu.edu.tr">huseyin</maintainer>


 
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>binascii</build_depend>
  <build_depend>bz2</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>binascii</build_export_depend>
  <build_export_depend>bz2</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>binascii</exec_depend>
  <exec_depend>bz2</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
